--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -15,7 +14,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         app:titleTextAppearance="@style/ToolbarTheme.Title">
-
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/back"
             android:layout_width="wrap_content"
@@ -28,13 +26,11 @@
             android:textColor="#515151"
             android:textSize="20sp"
             app:fontName="oswald_regular.ttf" />
-
         <RelativeLayout
             android:id="@+id/toolbarRelativeLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible">
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/selectOptToolbarTitle"
                 android:layout_width="wrap_content"
@@ -53,7 +49,6 @@
                 android:textSize="20sp"
                 android:visibility="visible"
                 app:fontName="oswald_regular.ttf" />
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textSubmit"
                 android:layout_width="wrap_content"
@@ -77,19 +72,16 @@
                 app:fontName="oswald.ttf" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
-
         <RelativeLayout
             android:id="@+id/relativeProof"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/addScreenShotTextView"
                 android:layout_width="match_parent"
@@ -106,7 +98,6 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
-
             <RelativeLayout
                 android:id="@+id/relativeMediaProof"
                 android:layout_width="match_parent"
@@ -116,7 +107,6 @@
                 android:background="#0DEB3955"
                 android:gravity="center"
                 android:visibility="visible">
-
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerMediaProof"
                     android:layout_width="match_parent"
@@ -133,14 +123,12 @@
                     android:layout_marginRight="0dp"
                     android:orientation="horizontal" />
             </RelativeLayout>
-
             <RelativeLayout
                 android:id="@+id/headerTextViewContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/relativeMediaProof"
                 android:layout_marginTop="10dp">
-
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/addlinkTextView"
                     android:layout_width="match_parent"
@@ -153,28 +141,48 @@
                     android:visibility="visible"
                     app:fontName="oswald_regular.ttf" />
             </RelativeLayout>
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerUrlProof"
                 android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/headerTextViewContainer"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:background="#0DEB3955" />
-
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/proofInstruction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="READ THIS FIRST"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/campaign_515151"
+                android:textSize="17sp"
+                android:layout_below="@+id/textAddUrlProof"
+                app:fontName="oswald_regular.ttf"/>
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textInstruction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:textColor="@color/campaign_list_buttons"
+                android:textColorLink="#0000ee"
+                android:textSize="15sp"
+                android:layout_below="@+id/proofInstruction"
+                app:fontName="open_sans.ttf"/>
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textFaq"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textAddUrlProof"
+                android:layout_below="@+id/textInstruction"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="12dp"
                 android:text="FAQS"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
-
-
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerFaqs"
                 android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
@@ -188,7 +196,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textFaq"
                 app:layout_constraintVertical_bias="0.0" />
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textAddUrlProof"
                 android:layout_width="40dp"
@@ -212,6 +219,4 @@
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
     </ScrollView>
-
 </android.support.constraint.ConstraintLayout>
-
