--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -5,15 +5,164 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:paddingBottom="100dp">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@color/white"-->
+    <!--android:orientation="vertical">-->
+    <!---->
+    <!--</LinearLayout>-->
+    <LinearLayout
         android:id="@+id/main_profile_About_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical">
-
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/full_name"
+            android:textColor="@color/app_grey"
+            android:textSize="14sp"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.CustomFontEditText
+            android:id="@+id/fullNameEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/mainprofile_thin_border"
+            android:hint=""
+            android:inputType="textNoSuggestions"
+            android:paddingBottom="15dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/app_light_black"
+            android:textSize="16dp"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/email_and_password"
+            android:textColor="@color/app_grey"
+            android:textSize="14sp"
+            app:fontName="oswald_regular.ttf" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/mainprofile_thin_border">
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/emailTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp"
+                android:paddingTop="10dp"
+                android:textColor="@color/app_light_black"
+                android:textSize="16dp"
+                app:fontName="oswald_regular.ttf" />
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/passwordTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/emailTextView"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="4dp"
+                android:paddingLeft="5dp"
+                android:text="*********"
+                app:fontName="oswald_regular.ttf" />
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/changePasswordTextView"
+                android:layout_width="50sp"
+                android:layout_height="30sp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/button_round"
+                android:gravity="center"
+                android:text="@string/ad.comments.edit_label"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                app:fontName="oswald_regular.ttf" />
+        </RelativeLayout>
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/app_settings.edit_profile.hint_phone"
+            android:textColor="@color/app_grey"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.PrefixEditText
+            android:id="@+id/phoneEditText"
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/mainprofile_thin_border"
+            android:gravity="center_vertical"
+            android:inputType="number"
+            android:paddingLeft="10dp"
+            android:tag="+91"
+            android:textColor="@color/app_light_black"
+            app:fontName="oswald.ttf" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/location"
+            android:textColor="@color/app_grey"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/cityTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/mainprofile_thin_border"
+            android:inputType="text"
+            android:paddingBottom="15dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="15dp"
+            android:textColor="@color/app_light_black"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:text="@string/blog_setup.blog_title_label"
+            android:textColor="@color/app_grey"
+            app:fontName="oswald_regular.ttf" />
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/handleNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/mainprofile_thin_border"
+            android:gravity="center_vertical"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/app_light_black"
+            android:textSize="14sp"
+            app:fontName="oswald_regular.ttf" />
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,7 +173,6 @@
             android:textColor="@color/app_light_black"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
-
         <com.mycity4kids.widget.CustomFontEditText
             android:id="@+id/aboutEditText"
             android:layout_width="match_parent"
@@ -43,7 +191,6 @@
             android:scrollbars="vertical"
             android:textColor="@color/app_light_black"
             android:textSize="16sp" />
-
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/childDetailTitleTextView"
             android:layout_width="wrap_content"
@@ -56,15 +203,12 @@
             android:textColor="@color/app_light_black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
-
         <LinearLayout
             android:id="@+id/childInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
         </LinearLayout>
-
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,7 +219,6 @@
             android:textColor="@color/app_light_black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
-
         <RelativeLayout
             android:id="@+id/addKidContainer"
             android:layout_width="match_parent"
@@ -84,7 +227,6 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/kids_container_border">
-
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/kidNameEditText"
                 android:layout_width="match_parent"
@@ -100,7 +242,6 @@
                 android:paddingLeft="8dp"
                 android:textColor="#000"
                 android:textSize="14sp" />
-
             <TextView
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
@@ -110,7 +251,6 @@
                 android:text="@string/app_settings.edit_profile.gender"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
-
             <TextView
                 android:id="@+id/dobLabelTextView"
                 android:layout_width="wrap_content"
@@ -120,7 +260,6 @@
                 android:text="@string/dob"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
-
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/genderSpinner"
                 android:layout_width="135dp"
@@ -132,7 +271,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/mainprofile_thin_border" />
-
             <ImageView
                 android:layout_width="14dp"
                 android:layout_height="14dp"
@@ -141,7 +279,6 @@
                 android:layout_marginRight="12dp"
                 android:layout_marginTop="12dp"
                 android:src="@drawable/arrowdownnew" />
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/kidsDOBTextView"
                 android:layout_width="100dp"
@@ -154,7 +291,6 @@
                 android:background="@drawable/mainprofile_thin_border"
                 android:gravity="center"
                 android:textColor="#000" />
-
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/addNewKidTextView"
                 android:layout_width="wrap_content"
@@ -170,7 +306,6 @@
                 android:paddingTop="8dp"
                 android:text="@string/app_settings.edit_prefs.add"
                 android:textColor="@color/white" />
-
         </RelativeLayout>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
