--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -80,4 +80,5 @@
     <dimen name="space_32">32dp</dimen>
     <dimen name="space_48">48dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="space_90">90dp</dimen>
 </resources>
