--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_detail_activity.xml
@@ -736,8 +736,9 @@
 
             <ImageView
                 android:id="@+id/cross_demo"
-                android:layout_width="@dimen/space_25"
-                android:layout_height="@dimen/space_25"
+                android:layout_width="@dimen/space_40"
+                android:layout_height="@dimen/space_40"
+                android:padding="@dimen/space_10"
                 android:layout_gravity="right"
                 android:src="@drawable/cross_icon" />
 
