--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -25,10 +25,10 @@
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/storyOptionImageView"
                 android:maxLines="2"
-                android:paddingBottom="14dp"
                 android:paddingLeft="14dp"
-                android:paddingRight="14dp"
                 android:paddingTop="14dp"
+                android:paddingRight="14dp"
+                android:paddingBottom="14dp"
                 android:text=""
                 android:textColor="@color/short_story.light_black_color"
                 android:textSize="18sp"
@@ -61,8 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/titleContainer"
             android:paddingLeft="14dp"
-            android:paddingRight="14dp"
             android:paddingTop="14dp"
+            android:paddingRight="14dp"
             android:text=""
             android:textColor="@color/short_story.light_black_color"
             android:textSize="17sp"
@@ -74,10 +74,29 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/storyBodyTextView"
             android:padding="14dp"
-            android:text="Reena Goyal"
+            android:text=""
             android:textColor="@color/app_blue"
             android:textSize="16sp"
             app:fontName="georgia.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/followAuthorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/storyBodyTextView"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/short_story_follow_author_bg"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:textColor="@color/app_red"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:fontName="oswald.ttf" />
+
 
         <View
             android:id="@+id/underline"
@@ -100,11 +119,11 @@
                 android:layout_centerVertical="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:paddingBottom="12dp"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:paddingTop="12dp"
-                app:srcCompat="@drawable/ic_facebook_svg"/>
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
+                app:srcCompat="@drawable/ic_facebook_svg" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/whatsappShareImageView"
@@ -114,10 +133,10 @@
                 android:layout_toRightOf="@+id/facebookShareImageView"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:paddingBottom="12dp"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
                 android:src="@drawable/ic_whats_app"
                 android:tint="@color/app_red" />
 
@@ -129,10 +148,10 @@
                 android:layout_toRightOf="@+id/whatsappShareImageView"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:paddingBottom="12dp"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
                 android:src="@drawable/ic_insta"
                 android:tint="@color/app_red" />
 
@@ -144,10 +163,10 @@
                 android:layout_toRightOf="@+id/instagramShareImageView"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:paddingBottom="12dp"
                 android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
                 android:src="@drawable/ic_share_white"
                 android:tint="@color/app_red" />
 
@@ -171,9 +190,9 @@
                         android:id="@+id/storyRecommendationCountTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="10dp"
                         android:paddingLeft="6dp"
                         android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
                         android:text="0"
                         android:textColor="@color/ad.stats.text"
                         android:textSize="15sp"
@@ -183,10 +202,10 @@
                         android:id="@+id/likeImageView"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingBottom="12dp"
                         android:paddingLeft="5dp"
-                        android:paddingRight="4dp"
                         android:paddingTop="12dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="12dp"
                         android:src="@drawable/ic_ss_like"
                         android:tint="@color/app_red" />
                 </LinearLayout>
@@ -201,9 +220,9 @@
                         android:id="@+id/storyCommentCountTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="10dp"
                         android:paddingLeft="6dp"
                         android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
                         android:text="0"
                         android:textColor="@color/ad.stats.text"
                         android:textSize="15sp"
@@ -213,10 +232,10 @@
                         android:id="@+id/icSsComment"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:paddingBottom="12dp"
                         android:paddingLeft="5dp"
-                        android:paddingRight="4dp"
                         android:paddingTop="12dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="12dp"
                         android:src="@drawable/ic_ss_comment"
                         android:tint="@color/app_red" />
                 </LinearLayout>
